objects/BMCServiceDesk__User_Account_Link__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__FKAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Account Links</relationshipLabel>
        <relationshipName>User_Account_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Account_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ToDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ToDelete</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>